# (C) 2010-2013 David Bond, All Rights Reserved

SUBDIRS = obj 
dist_doc_DATA = README

clean-purge: clean
	rm -rf \
 	  aclocal.m4 autom4te.cache  config.h config.h.in config.guess config.log \
    config.status  configure  install-sh Makefile Makefile.in  missing \
    stamp-h1 depcomp libtool ltmain.sh config.sub obj/.deps obj/Makefile.in \
    obj/Makefile

.PHONY: clean-purge
