# (C) 2010-2015 David Bond, All Rights Reserved

AC_INIT([Mokon Software Project Estimator],[DEV-VERSION],[mokon@mokon.net],
        [mspe],[http://mokon.net])

m4_include([mcommon/templates/configure.m4])
m4_include([mcommon/templates/configure_cpp.m4])

AC_REVISION([$Revision: 0.0 $])
M_COPYRIGHT_PROPRIETARY([David 'Mokon' Bond],[2010-2015])

M_PROG_DEPS([mspe],[
                     [[boost_program_options],[]]
                   ])

AC_OUTPUT
